[project]
name = "mwt-capture"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Chung-Kuan Chen", email = "b97b01045@gmail.com" }]
dependencies = [
    "lucam",
    "tifffile[all]",
    "tqdm",
    "opencv-python",
    "pywin32",
    "h5py",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
mwt = "mwt_capture:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = ["ipykernel", "ipython", "ruff"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mwt_capture"]

[tool.ruff.lint]
extend-select = ["I001"]
